--- a/Avatar.ipynb
+++ b/Avatar.ipynb
@@ -6,16 +6,146 @@
    "id": "14fad11d-feb2-4aa8-aa4d-dd9190553615",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import glob\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import mediapipe as mp\n",
+    "from pose_format import Pose\n",
+    "from pose_format.utils.holistic import load_holistic\n",
+    "from pose_format.utils.openpose import load_openpose_directory\n",
+    "from pose_format.pose_visualizer import PoseVisualizer\n",
+    "\n",
+    "mp_holistic = mp.solutions.holistic\n",
+    "FACEMESH_CONTOURS_POINTS = [str(p) for p in sorted(set([p for p_tup in list(mp_holistic.FACEMESH_CONTOURS) for p in p_tup]))]\n",
+    "\n",
+    "def load_video_frames(cap: cv2.VideoCapture):\n",
+    "    while True:\n",
+    "        ret, frame = cap.read()\n",
+    "        if not ret:\n",
+    "            break\n",
+    "        yield cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "    cap.release()\n",
+    "\n",
+    "def pose_estimate(video_path, output_path, lib='mediapipe', reduce=False):\n",
+    "    # Load video frames\n",
+    "    print('Load video ...')\n",
+    "    cap = cv2.VideoCapture(video_path)\n",
+    "    if not cap.isOpened():\n",
+    "        raise FileNotFoundError(f\"Cannot open video: {video_path}\")\n",
+    "\n",
+    "    width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "    height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "    fps = (cap.get(cv2.CAP_PROP_FPS))\n",
+    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "    print(f\"Video metadata: fps={fps}, width={width}, height={height}, frames={total_frames}\")\n",
+    "\n",
+    "    frames = load_video_frames(cap)\n",
+    "    video_metadata = dict(fps=fps, width=width, height=height)\n",
+    "\n",
+    "    # Perform pose estimation\n",
+    "    print('Estimating pose ...')\n",
+    "\n",
+    "    if lib == 'mediapipe':\n",
+    "        pose = load_holistic(frame_gen(), fps=fps, width=width, height=height, progress=True,\n",
+    "                         additional_holistic_config={'model_complexity': 2, 'refine_face_landmarks': True})\n",
+    "    pose = pose.get_components([\"POSE_LANDMARKS\", \"FACE_LANDMARKS\", \"LEFT_HAND_LANDMARKS\", \"RIGHT_HAND_LANDMARKS\"])\n",
+    "\n",
+    "    if reduce:\n",
+    "        pose = pose.get_components([\"POSE_LANDMARKS\", \"FACE_LANDMARKS\", \"LEFT_HAND_LANDMARKS\", \"RIGHT_HAND_LANDMARKS\"],\n",
+    "                                   {\"FACE_LANDMARKS\": FACEMESH_CONTOURS_POINTS})\n",
+    "    elif lib == 'openpose':\n",
+    "        pose = load_openpose_directory(video_path.replace('.mp4', '.openpose'), fps=fps, width=width, height=height)\n",
+    "\n",
+    "    print('Points:', pose.body.data.shape)\n",
+    "\n",
+    "    # Write output\n",
+    "    print('Writing pose file ...', output_path)\n",
+    "    with open(output_path, \"wb\") as f:\n",
+    "        pose.write(f)\n",
+    "\n",
+    "def pose_visualize(video_path, pose_path, overlay=False):\n",
+    "    print('Reading pose file ...')\n",
+    "    with open(pose_path, \"rb\") as f:\n",
+    "        buffer = f.read()\n",
+    "        pose = Pose.read(buffer)\n",
+    "\n",
+    "    v = PoseVisualizer(pose, thickness=2)\n",
+    "\n",
+    "    if overlay:\n",
+    "        out_file = f\"{pose_path}.overlay.mp4\"\n",
+    "        print(\"Saving overlay visualization:\", out_file)\n",
+    "        v.save_video(out_file, v.draw_on_video(video_path))\n",
+    "    else:\n",
+    "        out_file = f\"{pose_path}.mp4\"\n",
+    "        print(\"Saving skeleton-only visualization:\", out_file)\n",
+    "        v.save_video(out_file, v.draw())\n",
+    "\n",
+    "def find_video(filename=None, root=None):\n",
+    "    root = root or os.getcwd()\n",
+    "    if filename:\n",
+    "        # Try exact path\n",
+    "        if os.path.isabs(filename) and os.path.exists(filename):\n",
+    "            return os.path.abspath(filename)\n",
+    "        rel = os.path.join(root, filename)\n",
+    "        if os.path.exists(rel):\n",
+    "            return os.path.abspath(rel)\n",
+    "    # If no filename or not found, search for mp4/mov/avi\n",
+    "    for ext in ('.mp4', '.mov', '.avi', '.mkv'):\n",
+    "        matches = glob.glob(os.path.join(root, '**', f'*{ext}'), recursive=True)\n",
+    "        if matches:\n",
+    "            return os.path.abspath(matches[0])\n",
+    "    return None\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    ROOT = os.getcwd()\n",
+    "    print(\"Notebook root:\", ROOT)\n",
+    "\n",
+    "    \n",
+    "    video_filename = \"class_2.avi\"   # put your video filename here\n",
+    "\n",
+    "    video_path = find_video(video_filename, ROOT)\n",
+    "    if not video_path:\n",
+    "        print(f\" Video not found. Put '{video_filename}' in {ROOT} or update video_filename.\")\n",
+    "        sys.exit(1)\n",
+    "\n",
+    "    print(\" Using video:\", video_path)\n",
+    "\n",
+    "    # Make output folder next to video\n",
+    "    out_dir = os.path.join(os.path.dirname(video_path), \"output\")\n",
+    "    os.makedirs(out_dir, exist_ok=True)\n",
+    "    output_path = os.path.join(out_dir, os.path.splitext(os.path.basename(video_path))[0] + \".mediapipe.pose\")\n",
+    "\n",
+    "    lib = 'mediapipe'\n",
+    "    visualize = True\n",
+    "    reduce = True\n",
+    "\n",
+    "    pose_estimate(video_path, output_path, reduce=reduce, lib=lib)\n",
+    "    if visualize:\n",
+    "        pose_visualize(video_path, output_path, overlay=True)\n",
+    "        pose_visualize(video_path, output_path, overlay=False)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
