--- a/Avatar.ipynb
+++ b/Avatar.ipynb
@@ -29,6 +29,20 @@
     "        yield cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    cap.release()\n",
     "\n",
+    "def get_filtered_pose_landmarks():\n",
+    "    # Define the pose landmarks to keep (excluding certain points)\n",
+    "    pose_landmarks = ['NOSE', 'LEFT_EYE_INNER', 'LEFT_EYE', 'LEFT_EYE_OUTER', 'RIGHT_EYE_INNER', 'RIGHT_EYE',\n",
+    "                      'RIGHT_EYE_OUTER', 'LEFT_EAR', 'RIGHT_EAR', 'MOUTH_LEFT', 'MOUTH_RIGHT', 'LEFT_SHOULDER',\n",
+    "                      'RIGHT_SHOULDER', 'LEFT_ELBOW', 'RIGHT_ELBOW', 'LEFT_WRIST', 'RIGHT_WRIST', 'LEFT_PINKY',\n",
+    "                      'RIGHT_PINKY', 'LEFT_INDEX', 'RIGHT_INDEX', 'LEFT_THUMB', 'RIGHT_THUMB', 'LEFT_HIP',\n",
+    "                      'RIGHT_HIP', 'LEFT_KNEE', 'RIGHT_KNEE', 'LEFT_ANKLE', 'RIGHT_ANKLE', 'LEFT_HEEL',\n",
+    "                      'RIGHT_HEEL', 'LEFT_FOOT_INDEX', 'RIGHT_FOOT_INDEX']\n",
+    "    # Define the points to exclude (for example, hips and knees)\n",
+    "    exclude_points = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 17, 18, 19, 20, 21, 22}  # Left_Pinky, Right_Pinky, Left_Index, Right_Index, Left_Thumb, Right_Thumb\n",
+    "    # Generate list of points to keep (0-32 excluding exclude_points)\n",
+    "    filtered = [i for i in range(33) if i not in exclude_points]\n",
+    "    return [pose_landmarks[i] for i in filtered]\n",
+    "    \n",
     "def pose_estimate(video_path, output_path, lib='mediapipe', reduce=False):\n",
     "    # Load video frames\n",
     "    print('Load video ...')\n",
@@ -49,13 +63,17 @@
     "    print('Estimating pose ...')\n",
     "\n",
     "    if lib == 'mediapipe':\n",
-    "        pose = load_holistic(frame_gen(), fps=fps, width=width, height=height, progress=True,\n",
+    "        pose = load_holistic(frames, fps=fps, width=width, height=height, progress=True,\n",
     "                         additional_holistic_config={'model_complexity': 2, 'refine_face_landmarks': True})\n",
-    "    pose = pose.get_components([\"POSE_LANDMARKS\", \"FACE_LANDMARKS\", \"LEFT_HAND_LANDMARKS\", \"RIGHT_HAND_LANDMARKS\"])\n",
     "\n",
     "    if reduce:\n",
-    "        pose = pose.get_components([\"POSE_LANDMARKS\", \"FACE_LANDMARKS\", \"LEFT_HAND_LANDMARKS\", \"RIGHT_HAND_LANDMARKS\"],\n",
-    "                                   {\"FACE_LANDMARKS\": FACEMESH_CONTOURS_POINTS})\n",
+    "        pose = pose.get_components(\n",
+    "            [\"POSE_LANDMARKS\", \"FACE_LANDMARKS\", \"LEFT_HAND_LANDMARKS\", \"RIGHT_HAND_LANDMARKS\"],\n",
+    "            {\n",
+    "                \"FACE_LANDMARKS\": FACEMESH_CONTOURS_POINTS,\n",
+    "                \"POSE_LANDMARKS\": filtered_pose_landmarks\n",
+    "            }\n",
+    "        )\n",
     "    elif lib == 'openpose':\n",
     "        pose = load_openpose_directory(video_path.replace('.mp4', '.openpose'), fps=fps, width=width, height=height)\n",
     "\n",
@@ -131,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
